src/scss/recit/_moodle-override.scss
/*****************************
 * MOODLE OVERRIDE
 *****************************/
 body{
    height: auto;
    
    #page-wrapper{
        padding: 0px;
    }
 }
 

 .block_myoverview .card-deck .myoverviewimg.courseimage{
	background-size: contain;
	background-repeat: no-repeat;	
 }
 section .block_myoverview .card{
	 border: none;
 }

#categoryquestions{
    td,th{
        border: none;
        padding: .4rem;
    }
}

.editor_atto_content{width: 100%!important;}

.generaltable{
    width: 100%;
    max-width: 100%;
    margin-bottom: 1rem;
    background-color: transparent;
}

.generaltable tbody tr:nth-of-type(odd) {
    background-color: rgba(0,0,0,.05);
}

#id_onlinetext_editor_atto_image_widthentry, #id_onlinetext_editor_atto_image_heightentry{
    width: 100px;
}

// Quiz navigation
.path-mod-quiz {
    #mod_quiz_navblock {
        .qnbutton{color: #007bff;} // force the color because there is a conflict with btn-secondary
    }

    .formulation {
        background-color: #ffffff;
        border: 1px solid rgba(0,0,0,.125);
    } 

    .que{
        .info{
            float: none; display: flex; width: 100%; justify-content: space-between; align-items: center; background-color: transparent; border: none; margin: 0;
            &>div{margin: 0;}
        } 
        .content{margin: 0;}
    }
}

// Background-color des embed questions dans les page
.que .formulation{
    background-color: transparent!important;
}

.qnbutton.flagged .thispageholder {
    background: transparent url([[pix:theme|mod/quiz/flag-on]]) 15px 0 no-repeat;
}
.path-mod-assign [data-region="user-selector"] [data-action="previous-user"]:before{
    font-size: 26px;
    content: "<";
}
.path-mod-assign [data-region="user-selector"] [data-action="next-user"]::before {
    font-size: 26px;
    content: ">";
}

//input[type=text], input[type=password], textarea{width: 100%;}
.moodle-dialogue-wrap{min-width: 350px;}

@media (min-width: 576px){
    .form-inline .form-control {
        width: inherit;
    }
}

// prevent the #page to move towards left when opening the drawer
body.drawer-open-right{margin-right: inherit;}
@media (min-width:768px){body.drawer-open-right{margin-right: inherit;}}


#page-wrapper{margin-bottom: 0px}
#page-wrapper::after{content:"";display:block;min-height:0px}
 
.block_navigation .block_tree [aria-expanded=false]:before, .block_settings .block_tree [aria-expanded=false]:before{content: "\23F5"; }
.block_navigation .block_tree [aria-expanded=true]:before, .block_settings .block_tree [aria-expanded=true]:before {content: "\23F7"; }

.messaging-area-container .messaging-area .contacts-area{width: 340px;}
.messaging-area-container .messaging-area .messages-area{width:calc(100% - 340px);}

span.instancename{margin: .5rem;}

// modification de l'aspect du bouton de navigation du quiz (bloc)
#mod_quiz_navblock{
    .btn{
        white-space: normal!important;
    }
}

// ça affecte la taille des icônes dans la top-navbar
nav.navbar ul.navbar-nav .popover-region .popover-region-toggle{line-height: normal;}

#course-banner{
    .page-context-header{
        .header-button-group{
            float:inherit;
            #message-user-button{color: #FFF;}
        }
    }
}

// DÉBUT PATCH H5P
#fitem_id_h5peditor {
    .form-control-static {
        width: 100% !important;
    }
}
// FIN PATCH H5P

#top-1.engine{display: none;} // code dynamique intrusif du Mobirise   

@media (max-width: 767.98px){
    .breadcrumb:not(:empty) {
        border: 0;
    }
}

/**
 * Grader report. Table heading to stick under navbar
 */
.path-grade-report-grader {
    #mainTopNav {
        max-width: unset;
    }
    #page-wrapper #page {
        max-width: unset;
    }
    #page-footer {
        max-width: unset;
    }
    .gradeparent {
        tr.heading {
            position: sticky;
            top: $top-navbar-height;
            z-index: 1;
        }
    }
}

.path-admin-reportbuilder {
    #page-wrapper {
        margin-top: $top-navbar-height !important;
    }
}

@media (min-width: 768px){
.activity-item:not(.activityinline) {
    padding: 0.5rem 1.5rem;
    .activityiconcontainer {
        width: 40px;
        height: 40px;
    }
}
}

body.bulkenabled{
    #region-main{
        padding-left: 2rem; // fix to display checkbox on Moodle 4.3 - bulk actions
    }
}

// Small bug in tab component on HTML editor: remove the black pins in front of the names
.course-content li.section:not(.course-section) ul {
    list-style: none;
}

// Patch module book
.path-mod-book{
    // the navigation bar margin adds a scroll-x
    #mod_book-chaptersnavigation{
        margin: auto!important;
        position: fixed;
        top: 45%;
        width: 95vw;
        z-index: 10200;
        max-width: calc(#{$page-max-width} - 37px);
        .tertiary-navigation{padding: 0px}
    }

    .vertical-left {
        #mod_book-chaptersnavigation{
            max-width: calc(#{$page-max-width} - 300px - 37px)
        }

    }
} 
.path-mod-assign{
    #fitem_id_onlinetext_editor{
        div[data-fieldtype="editor"]{
            flex: 0 0 100%; max-width: 100%;  // Improved student writing box within assignment text submission
        }
    }
}
.single-section .section-navigation {
    display: none!important;
}
.tertiary-navigation .tertiary-navigation-selector .dropdown-toggle.btn{
    border-color: #0f6cbf;
    border-width: 3px;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
}

